--- a/index.html
+++ b/index.html
@@ -10,31 +10,37 @@
     <header> 
         <h1>Blog posts</h1>
     </header>
-    <article>
+    <div class="container">
+    <article class="grid-item">
         <h1>Hello title</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam esse provident recusandae ex alias, voluptatum quae ipsa, ratione harum, cum assumenda praesentium tenetur culpa natus aliquam. Quas beatae porro voluptas!</p>
     <a href="">Read more</a>
     </article>
-    <article>
-        <h1>Hello title</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam esse provident recusandae ex alias, voluptatum quae ipsa, ratione harum, cum assumenda praesentium tenetur culpa natus aliquam. Quas beatae porro voluptas!</p>
-    <a href="">Read more</a>
-    </article><article>
-        <h1>Hello title</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam esse provident recusandae ex alias, voluptatum quae ipsa, ratione harum, cum assumenda praesentium tenetur culpa natus aliquam. Quas beatae porro voluptas!</p>
-    <a href="">Read more</a>
-    </article><article>
-        <h1>Hello title</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam esse provident recusandae ex alias, voluptatum quae ipsa, ratione harum, cum assumenda praesentium tenetur culpa natus aliquam. Quas beatae porro voluptas!</p>
-    <a href="">Read more</a>
-    </article><article>
-        <h1>Hello title</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam esse provident recusandae ex alias, voluptatum quae ipsa, ratione harum, cum assumenda praesentium tenetur culpa natus aliquam. Quas beatae porro voluptas!</p>
-    <a href="">Read more</a>
-    </article><article>
+    <article class="grid-item">
         <h1>Hello title</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam esse provident recusandae ex alias, voluptatum quae ipsa, ratione harum, cum assumenda praesentium tenetur culpa natus aliquam. Quas beatae porro voluptas!</p>
     <a href="">Read more</a>
     </article>
+    <article class="grid-item">
+        <h1>Hello title</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam esse provident recusandae ex alias, voluptatum quae ipsa, ratione harum, cum assumenda praesentium tenetur culpa natus aliquam. Quas beatae porro voluptas!</p>
+    <a href="">Read more</a>
+    </article>
+    <article class="grid-item">
+        <h1>Hello title</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam esse provident recusandae ex alias, voluptatum quae ipsa, ratione harum, cum assumenda praesentium tenetur culpa natus aliquam. Quas beatae porro voluptas!</p>
+    <a href="">Read more</a>
+    </article>
+    <article class="grid-item">
+        <h1>Hello title</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam esse provident recusandae ex alias, voluptatum quae ipsa, ratione harum, cum assumenda praesentium tenetur culpa natus aliquam. Quas beatae porro voluptas!</p>
+    <a href="">Read more</a>
+    </article>
+    <article class="grid-item">
+        <h1>Hello title</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam esse provident recusandae ex alias, voluptatum quae ipsa, ratione harum, cum assumenda praesentium tenetur culpa natus aliquam. Quas beatae porro voluptas!</p>
+    <a href="">Read more</a>
+    </article>
+</div>
 </body>
 </html>
